--- a/asset/styles/layouts/_header.scss
+++ b/asset/styles/layouts/_header.scss
@@ -29,6 +29,7 @@ header {
         width: 75%;
         margin: 0 auto;
         padding: 20px 0;
+        height: 100px;
     }
 
     .nav-container {
@@ -38,9 +39,14 @@ header {
         align-items: center;
 
 
+
         h2 {
             font-size: 3em;
             color: $white1;
+
+            @media screen and (max-width:900px) {
+                font-size: 2.5em;
+            }
 
             &:hover {
                 color: $grey3;
@@ -51,6 +57,10 @@ header {
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
+
+            @media screen and (max-width:900px) {
+                font-size: 0.9em;
+            }
 
         }
 
@@ -85,6 +95,12 @@ header {
             //     text-underline-offset: 5px;
             //     transition: 0.2s;
             // }
+
+            @media screen and (max-width:900px) {
+                a {
+                    font-size: 0.9em;
+                }
+            }
         }
 
         .ul-social {
